<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.usbcali.mobilebanking.view.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_slogan"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:text="@string/slogan"
        app:layout_constraintBottom_toTopOf="@+id/spn_document_type"
        app:layout_constraintEnd_toEndOf="@+id/view_title"
        app:layout_constraintStart_toStartOf="@+id/view_title"
        app:layout_constraintTop_toBottomOf="@+id/view_title" />

    <Spinner
        android:id="@+id/spn_document_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_document_num"
        app:layout_constraintEnd_toEndOf="@+id/view_slogan"
        app:layout_constraintStart_toStartOf="@+id/view_slogan"
        app:layout_constraintTop_toBottomOf="@+id/view_slogan" />

    <EditText
        android:id="@+id/txt_document_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txt_document_num"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="@+id/spn_document_type"
        app:layout_constraintStart_toStartOf="@+id/spn_document_type"
        app:layout_constraintTop_toBottomOf="@+id/spn_document_type" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/txt_document_num"
        app:layout_constraintStart_toStartOf="@+id/txt_document_num"
        app:layout_constraintTop_toBottomOf="@+id/txt_document_num" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

</android.support.constraint.ConstraintLayout>
