<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_transfer"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_title" />

    <TextView
        android:id="@+id/view_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/view_name"
        app:layout_constraintStart_toStartOf="@+id/view_name"
        app:layout_constraintTop_toBottomOf="@+id/view_name" />

    <Spinner
        android:id="@+id/spn_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        app:layout_constraintEnd_toEndOf="@+id/view_account"
        app:layout_constraintStart_toStartOf="@+id/view_account"
        app:layout_constraintTop_toBottomOf="@+id/view_account" />

    <EditText
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txt_amount"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/spn_products"
        app:layout_constraintStart_toStartOf="@+id/spn_products"
        app:layout_constraintTop_toBottomOf="@+id/spn_products" />

    <Button
        android:id="@+id/btn_accept"
        style="@style/AppTheme.ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn_ok"
        app:layout_constraintEnd_toEndOf="@+id/txt_amount"
        app:layout_constraintStart_toStartOf="@+id/txt_amount"
        app:layout_constraintTop_toBottomOf="@+id/txt_amount" />

</android.support.constraint.ConstraintLayout>